GNOME Bugzilla – Bug 707390
soundtouch: Does not compile against soundtouch 1.4.0
Last modified: 2013-09-03 15:39:10 UTC
make -C soundtouch make[3]: Entering directory `/home/cschalle/devel/gst-plugins-bad/ext/soundtouch' CC libgstsoundtouch_la-plugin.lo CXX libgstsoundtouch_la-gstpitch.lo gstpitch.cc:77:2: error: #error "Only integer or float samples are supported" #error "Only integer or float samples are supported" ^ In file included from /usr/include/gstreamer-1.0/gst/gstpad.h:68:0, from /usr/include/gstreamer-1.0/gst/gstelement.h:57, from /usr/include/gstreamer-1.0/gst/gstbin.h:27, from /usr/include/gstreamer-1.0/gst/gst.h:34, from gstpitch.cc:36: gstpitch.cc:84:22: error: 'SUPPORTED_CAPS' was not declared in this scope GST_STATIC_CAPS (SUPPORTED_CAPS)); ^ /usr/include/gstreamer-1.0/gst/gstpadtemplate.h:174:26: note: in definition of macro 'GST_STATIC_PAD_TEMPLATE' /* caps */ caps \ ^ gstpitch.cc:84:5: note: in expansion of macro 'GST_STATIC_CAPS' GST_STATIC_CAPS (SUPPORTED_CAPS)); ^ gstpitch.cc:90:22: error: 'SUPPORTED_CAPS' was not declared in this scope GST_STATIC_CAPS (SUPPORTED_CAPS)); ^ /usr/include/gstreamer-1.0/gst/gstpadtemplate.h:174:26: note: in definition of macro 'GST_STATIC_PAD_TEMPLATE' /* caps */ caps \ ^ gstpitch.cc:90:5: note: in expansion of macro 'GST_STATIC_CAPS' GST_STATIC_CAPS (SUPPORTED_CAPS)); ^ make[3]: *** [libgstsoundtouch_la-gstpitch.lo] Error 1 make[3]: Leaving directory `/home/cschalle/devel/gst-plugins-bad/ext/soundtouch' make[2]: *** [soundtouch] Error 2 make[2]: Leaving directory `/home/cschalle/devel/gst-plugins-bad/ext' make[1]: *** [all-recursive] Error 1 make[1]: Leaving directory `/home/cschalle/devel/gst-plugins-bad' make: *** [all] Error 2 Using soundtouch-1.4.0-7 on Fedora, and my sound touch header files can be found here: http://uraeus.fedorapeople.org/soundtouch.tar.bz2
commit 8e5f0e37f8d776888af468097c98a8130f3db792 Author: Sebastian Dröge <slomo@circular-chaos.org> Date: Tue Sep 3 17:36:08 2013 +0200 soundtouch: Fix compilation with soundtouch 1.4.0 It used FLOAT_SAMPLES/INTEGER_SAMPLES #defines instead of ones properly prefixed with a namespace. https://bugzilla.gnome.org/show_bug.cgi?id=707390