ext/soundtouch/gstpitch.cc
@@ -61,6 +61,13 @@ enum
   ARG_PITCH
 };
 
+/* For soundtouch 1.4 */
+#if defined(INTEGER_SAMPLES)
+#define SOUNDTOUCH_INTEGER_SAMPLES 1
+#elif defined(FLOAT_SAMPLES)
+#define SOUNDTOUCH_FLOAT_SAMPLES 1
+#endif
+
 #if defined(SOUNDTOUCH_FLOAT_SAMPLES)
   #define SUPPORTED_CAPS \
     "audio/x-raw, " \
